k8s/frontend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
<<<<<<< HEAD
=======
  labels:
    app: registration-frontend
    version: blue
>>>>>>> 6952196 (first commit)
spec:
  replicas: 1
  selector:
    matchLabels:
<<<<<<< HEAD
      app: frontend
=======
      app: registration-frontend
>>>>>>> 6952196 (first commit)
      version: blue
  template:
    metadata:
      labels:
<<<<<<< HEAD
        app: frontend
        version: blue
    spec:
      containers:
        - name: frontend-blue
          image: govind2024/frontend-blue:v1   # 👈 your Docker Hub image
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
=======
        app: registration-frontend
        version: blue
    spec:
      containers:
      - name: frontend-blue
        image: govind02420/frontend-blue:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3100
        livenessProbe:
          httpGet:
            path: /health
            port: 3100
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3100
          initialDelaySeconds: 2
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue-svc
spec:
  selector:
    app: registration-frontend
    version: blue
  ports:
    - port: 3100
      targetPort: 3100
  type: ClusterIP
>>>>>>> 6952196 (first commit)
