k8s/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
<<<<<<< HEAD
=======
  labels:
    app: registration-frontend
    version: green
>>>>>>> 6952196 (first commit)
spec:
  replicas: 1
  selector:
    matchLabels:
<<<<<<< HEAD
      app: frontend
=======
      app: registration-frontend
>>>>>>> 6952196 (first commit)
      version: green
  template:
    metadata:
      labels:
<<<<<<< HEAD
        app: frontend
        version: green
    spec:
      containers:
        - name: frontend-green
          image: govind2024/frontend-green:v1   # your Docker Hub image
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
=======
        app: registration-frontend
        version: green
    spec:
      containers:
      - name: frontend-green
        image: govind02420/frontend-green:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3200
        livenessProbe:
          httpGet:
            path: /health
            port: 3200
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3200
          initialDelaySeconds: 2
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-green-svc
spec:
  selector:
    app: registration-frontend
    version: green
  ports:
    - port: 3200
      targetPort: 3200
  type: ClusterIP
>>>>>>> 6952196 (first commit)
